--- a/commons/base.yaml
+++ b/commons/base.yaml
@@ -6,11 +6,11 @@ services:
       - "traefik.http.routers.alfresco.rule=PathPrefix(`/`)"
       - "traefik.http.services.alfresco.loadbalancer.server.port=8080"
       - "traefik.http.middlewares.limit.buffering.maxRequestBodyBytes=5368709120"
-      - "traefik.http.middlewares.alfresco-root-redirect.redirectregex.regex=/alfresco$"
-      - "traefik.http.middlewares.alfresco-root-redirect.redirectregex.replacement=/alfresco/"
+      - "traefik.http.middlewares.alfresco-root-redirect.redirectregex.regex=^https?://[^/]+/([^/.]+)$$"
+      - "traefik.http.middlewares.alfresco-root-redirect.redirectregex.replacement=$$0/"
       - "traefik.http.middlewares.alfresco-chain.chain.middlewares=alfresco-root-redirect@docker,limit@docker"
       - "traefik.http.routers.alfresco.middlewares=alfresco-chain@docker"
-      - "traefik.http.routers.solrapideny.rule=PathRegexp(`^/alfresco/(wc)?s(ervice)?/api/solr/.*$`)"
+      - "traefik.http.routers.solrapideny.rule=PathRegexp(`^/alfresco/(wc)?s(ervice)?/api/solr/.*$$`)"
       - "traefik.http.middlewares.acsfakeauth.basicauth.users=fake:"
       - "traefik.http.routers.solrapideny.middlewares=acsfakeauth@docker"
       - "traefik.http.routers.alfrescomicrometer.rule=PathRegexp(`^/alfresco/(wc)?s(ervice)?/prometheus`)"
@@ -22,7 +22,7 @@ services:
       - "traefik.http.routers.share.rule=PathPrefix(`/share`)"
       - "traefik.http.services.share.loadbalancer.server.port=8080"
       - "traefik.http.middlewares.limit.buffering.maxRequestBodyBytes=5368709120"
-      - "traefik.http.middlewares.share-root-redirect.redirectregex.regex=/share$"
+      - "traefik.http.middlewares.share-root-redirect.redirectregex.regex=/share$$"
       - "traefik.http.middlewares.share-root-redirect.redirectregex.replacement=/share/"
       - "traefik.http.middlewares.share-chain.chain.middlewares=share-root-redirect@docker,limit@docker"
       - "traefik.http.routers.share.middlewares=share-chain@docker"
@@ -33,6 +33,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.adw.rule=PathPrefix(`/workspace`)"
+      - "traefik.http.services.digital-workspace.loadbalancer.server.port=8080"
       - "traefik.http.middlewares.adwforceslash.redirectregex.regex=^(.*/workspace)$$"
       - "traefik.http.middlewares.adwforceslash.redirectregex.replacement=$${1}/"
       - "traefik.http.middlewares.adwroot.stripprefix.prefixes=/workspace"
@@ -42,6 +43,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.aca.rule=PathPrefix(`/content-app`)"
+      - "traefik.http.services.content-app.loadbalancer.server.port=8080"
       - "traefik.http.middlewares.acaroot.stripprefix.prefixes=/content-app"
       - "traefik.http.middlewares.acaforceslash.redirectregex.regex=^(.*/content-app)$$"
       - "traefik.http.middlewares.acaforceslash.redirectregex.replacement=$${1}/"
@@ -51,6 +53,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.acc.rule=PathPrefix(`/control-center`) || PathPrefix(`/admin`)"
+      - "traefik.http.services.control-center.loadbalancer.server.port=8080"
       - "traefik.http.middlewares.accroot.stripprefix.prefixes=/admin,/control-center"
       - "traefik.http.middlewares.accforceslash.redirectregex.regex=^(.*/(admin|control-center))$$"
       - "traefik.http.middlewares.accforceslash.redirectregex.replacement=$${1}/"
