--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@
 #
 services:
   alfresco:
+    #image: docker.io/alfresco/alfresco-content-repository-community:25.1.0
     image: docker.io/alfresco/alfresco-governance-repository-community:25.1.0
     mem_limit: 1900m
     environment:
@@ -107,7 +108,7 @@ services:
       file: commons/base.yaml
       service: share
   postgres:
-    image: postgres:14.4
+    image: postgres:16.5
     mem_limit: 512m
     environment:
       - POSTGRES_PASSWORD=alfresco
