--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,7 +58,8 @@ services:
       retries: 5
       start_period: 1m
     volumes:
-      - /usr/local/tomcat/alf_data
+      #- /usr/local/tomcat/alf_data
+      - ./services/content/alfresco-global.properties:/usr/local/tomcat/shared/classes/alfresco-global.properties
     extends:
       file: commons/base.yaml
       service: alfresco
