--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@
 # More details here:
 # https://www.oracle.com/technetwork/java/javase/10-relnote-issues-4108729.html
 #
+version: "3.8"
 services:
   alfresco:
     #image: docker.io/alfresco/alfresco-content-repository-community:25.2.0
@@ -190,6 +191,8 @@ services:
     extends:
       file: commons/base.yaml
       service: content-app
+    profiles:
+      - disabled
   control-center:
     image: quay.io/alfresco/alfresco-control-center:10.0.0
     mem_limit: 128m
@@ -198,7 +201,7 @@ services:
       APP_CONFIG_AUTH_TYPE: "BASIC"
       BASE_PATH: ./
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/"]
+      test: ["CMD", "curl", "-f", "http://alfresco:8080/"]
       interval: 10s
       timeout: 1s
       retries: 3
@@ -206,6 +209,8 @@ services:
     extends:
       file: commons/base.yaml
       service: control-center
+    profiles:
+      - disabled
   proxy:
     extends:
       file: commons/base.yaml
@@ -217,6 +222,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 9999:8080
+    profiles:
+      - disabled
   queryalfapi:
     image: wildsdocker/queryalfapi:v3
     ports:
@@ -257,10 +264,49 @@ services:
       llama_vision_model: "unsloth/Llama-3.2-11B-Vision-Instruct"
       llama_chat_repo: "hugging-quants/Llama-3.2-3B-Instruct-Q4_K_M-GGUF"
       llama_chat_filename: "llama-3.2-3b-instruct-q4_k_m.gguf"
-  wildsalfmcp:
-    image: wildsdocker/wildsalfmcp:v1
+    profiles:
+      - disabled
+  ollama:
+    container_name: ollama
+    image: ollama/ollama
+    ports:
+      - "11434:11434" # Default Ollama port
+    volumes:
+      - ./data/services/ollama/:/root/.ollama
+      - ./data/services/ollama/entrypoint.sh:/entrypoint.sh
+    deploy:
+      resources:
+        limits:
+          memory: 24G
+        reservations:
+          memory: 8G
+    restart: unless-stopped
+    entrypoint: ["/usr/bin/bash", "/entrypoint.sh"]
+  open-webui:
+    container_name: open-webui
+    image: ghcr.io/open-webui/open-webui:main # Or :cuda for GPU support
+    ports:
+      - "3000:8080" # Host_port:Container_port
+    volumes:
+      - ./data/services/openwebui:/app/backend/data # Persistent storage for Open WebUI data
+    environment:
+      - OLLAMA_BASE_URL=http://ollama:11434 # Link to the Ollama service
+    depends_on:
+      - ollama # Ensures Ollama starts before Open WebUI
+    restart: unless-stopped
+  mcpo:
+    image: ghcr.io/open-webui/mcpo:main
+    container_name: mcpo
     ports:
       - 8000:8000
+    command: mcpo --server-type "sse" -- http://wildsalfmcp:8000/sse
+    restart: unless-stopped
+    depends_on:
+      - wildsalfmcp # Ensures the mcp server starts before mcpo server otherwise it will crash
+  wildsalfmcp:
+    image: wildsdocker/wildsalfmcp:v1
+    #ports:
+    #  - 8000:8000
     deploy:
       resources:
         limits:
