commented out ollama container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -266,22 +266,22 @@ services:
       llama_chat_filename: "llama-3.2-3b-instruct-q4_k_m.gguf"
     profiles:
       - disabled
-  ollama:
-    container_name: ollama
-    image: ollama/ollama
-    ports:
-      - "11434:11434" # Default Ollama port
-    volumes:
-      - ./data/services/ollama/:/root/.ollama
-      - ./data/services/ollama/entrypoint.sh:/entrypoint.sh
-    deploy:
-      resources:
-        limits:
-          memory: 24G
-        reservations:
-          memory: 8G
-    restart: unless-stopped
-    entrypoint: ["/usr/bin/bash", "/entrypoint.sh"]
+  # ollama:
+  #   container_name: ollama
+  #   image: ollama/ollama
+  #   ports:
+  #     - "11434:11434" # Default Ollama port
+  #   volumes:
+  #     - ./data/services/ollama/:/root/.ollama
+  #     - ./data/services/ollama/entrypoint.sh:/entrypoint.sh
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 24G
+  #       reservations:
+  #         memory: 8G
+  #   restart: unless-stopped
+  #   entrypoint: ["/usr/bin/bash", "/entrypoint.sh"]
   open-webui:
     container_name: open-webui
     image: ghcr.io/open-webui/open-webui:main # Or :cuda for GPU support
@@ -290,9 +290,9 @@ services:
     volumes:
       - ./data/services/openwebui:/app/backend/data # Persistent storage for Open WebUI data
     environment:
-      - OLLAMA_BASE_URL=http://ollama:11434 # Link to the Ollama service
-    depends_on:
-      - ollama # Ensures Ollama starts before Open WebUI
+      - OLLAMA_BASE_URL=http://host.docker.internal:11434 # Link to the Ollama service
+    # depends_on:
+    #   - ollama # Ensures Ollama starts before Open WebUI
     restart: unless-stopped
   mcpo:
     image: ghcr.io/open-webui/mcpo:main
