--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,9 @@ services:
         -Dmetadata-keystore.metadata.password=oKIWzVdEdA
         -Dmetadata-keystore.metadata.algorithm=DESede
       JAVA_OPTS: >-
+        -Dactiviti.client.extension.endpoint=http://process:8080/activiti-app
+        -Dactiviti.client.extension.user=admin
+        -Dactiviti.client.extension.password=admin
         -Ddb.driver=org.postgresql.Driver
         -Ddb.username=alfresco
         -Ddb.password=alfresco
@@ -69,6 +72,8 @@ services:
       start_period: 1m
     volumes:
       - ./data/services/content/alfresco-global.properties:/usr/local/tomcat/shared/classes/alfresco-global.properties
+      - ./data/services/content/index.jsp:/usr/local/tomcat/webapps/ROOT/index.jsp
+      - alf_data:/usr/local/tomcat/alf_data/
     extends:
       file: commons/base.yaml
       service: alfresco
@@ -134,6 +139,8 @@ services:
       timeout: 3s
       retries: 3
       start_period: 5s
+    volumes:
+      - postgresdata:/var/lib/postgresql/data
   solr6:
     image: docker.io/alfresco/alfresco-search-services:2.0.16
     mem_limit: 2g
@@ -191,8 +198,6 @@ services:
     extends:
       file: commons/base.yaml
       service: content-app
-    profiles:
-      - disabled
   control-center:
     image: quay.io/alfresco/alfresco-control-center:10.0.0
     mem_limit: 128m
@@ -209,8 +214,6 @@ services:
     extends:
       file: commons/base.yaml
       service: control-center
-    profiles:
-      - disabled
   proxy:
     extends:
       file: commons/base.yaml
@@ -222,8 +225,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 9999:8080
-    profiles:
-      - disabled
   queryalfapi:
     image: wildsdocker/queryalfapi:v3
     ports:
@@ -293,14 +294,15 @@ services:
       - OLLAMA_BASE_URL=http://host.docker.internal:11434 # Link to the Ollama service
     # depends_on:
     #   - ollama # Ensures Ollama starts before Open WebUI
-    restart: unless-stopped
+    restart: on-failure:5
+    depends_on:
+      - mcpo
   mcpo:
     image: ghcr.io/open-webui/mcpo:main
     container_name: mcpo
     ports:
       - 8001:8000
     command: mcpo --server-type "sse" -- http://wildsalfmcp:8000/sse
-    restart: unless-stopped
     depends_on:
       - wildsalfmcp # Ensures the mcp server starts before mcpo server otherwise it will crash
   wildsalfmcp:
@@ -312,3 +314,6 @@ services:
       user: "admin"
       pass: "admin"
       FASTMCP_HOST: 0.0.0.0
+volumes:
+  alf_data:
+  postgresdata:
