made correction to ldap sync settings in global properties

--- a/data/services/content/alfresco-global.properties
+++ b/data/services/content/alfresco-global.properties
@@ -45,7 +45,7 @@ ldap.synchronization.groupDifferentialQuery=(&(objectclass\=groupOfNames)(!(modi
 ldap.synchronization.personQuery=(objectclass\=inetOrgPerson)
 ldap.synchronization.personDifferentialQuery=(&(objectclass\=inetOrgPerson)(!(modifyTimestamp<\={0})))
 ldap.synchronization.groupSearchBase=ou\=groups,dc\=example,dc\=com
-ldap.synchronization.userSearchBase=ou\=users,dc\=localhost,dc\=co
+ldap.synchronization.userSearchBase=ou\=users,dc\=example,dc\=com
 ldap.synchronization.modifyTimestampAttributeName=modifyTimestamp
 ldap.synchronization.timestampFormat=yyyyMMddHHmmss
 ldap.synchronization.userIdAttributeName=uid
@@ -64,3 +64,14 @@ synchronization.syncOnStartup=true
 synchronization.synchronizeChangesOnly=false
 #synchronization.import.cron=0 0/10 * 1/1 * ?
 synchronization.import.cron=0 * * ? * *
+
+#Mail config for outbound
+mail.host=email
+mail.port=25
+mail.from.default=demo@example.com
+mail.username=demo@example.com
+mail.password=demo
+mail.protocol=smtp
+mail.smtps.starttls.enable=false
+mail.smtps.auth=false
+mail.smtp.debug=true
