minor update to not start ancillary services

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -232,6 +232,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 9999:8080
+    profiles:
+      - donotstart
   queryalfapi:
     image: wildsdocker/queryalfapi:v3
     ports:
