updated openweb to not start by default

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -286,8 +286,8 @@ services:
       - OLLAMA_BASE_URL=http://host.docker.internal:11434 # Link to the Ollama service on the host
     #depends_on:
     #  - mcpo
-    #profiles:
-    #  - donotstart
+    profiles:
+      - donotstart
   mcpo:
     image: ghcr.io/open-webui/mcpo:main
     ports:
